[package]
name = "radicle-core"
description = "Radicle core data type definitions"
homepage.workspace = true
repository.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords = ["radicle", "git", "data-types"]
rust-version.workspace = true

# For documentation of features refer to the module documentation in `./lib.rs`
[features]
default = ["std"]
git2 = ["dep:git2", "radicle-oid/git2"]
gix = ["dep:gix-hash", "radicle-oid/gix"]
std = ["radicle-oid/std", "thiserror/std", "schemars/std", "serde/std"]

[dependencies]
git2 = { workspace = true, optional = true }
gix-hash = { workspace = true, optional = true }
multibase = { workspace = true }
proptest = { workspace = true, optional = true }
qcheck = { workspace = true, optional = true }
radicle-crypto = { workspace = true }
radicle-git-ref-format = { workspace = true, optional = true }
radicle-oid = { workspace = true, default-features = false, features = ["sha1"] }
schemars = { workspace = true, optional = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true, default-features = false }
sqlite = { workspace = true, optional = true }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
