[package]
name = "radicle-crypto"
description = "Radicle cryptographic primitives"
homepage.workspace = true
repository.workspace = true
license.workspace = true
version = "0.16.0"
authors = [
  "cloudhead <cloudhead@radicle.xyz>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true

[features]
test = ["fastrand", "qcheck"]
ssh = ["ssh-agent-lib", "ssh-key"]

[dependencies]
amplify = { workspace = true }
cyphernet = { workspace = true, features = ["ed25519"], optional = true }
ec25519 = "0.1.0"
fastrand = { workspace = true, optional = true }
multibase = { workspace = true }
qcheck = { workspace = true, optional = true }
git-ref-format-core = { workspace = true, optional = true }
schemars = { workspace = true, optional = true, features = ["derive", "std"] }
serde = { workspace = true, features = ["derive", "std"] }
signature = { workspace = true, features = ["std"] }
sqlite = { workspace = true, features = ["bundled"], optional = true }
ssh-agent-lib = { version = "0.5.2", optional = true, default-features = false, features = ["log"] }
ssh-key = { version = "0.6.3", default-features = false, features = ["std", "encryption", "getrandom"], optional = true }
thiserror = { workspace = true, default-features = true }
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
winpipe = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
qcheck = { workspace = true }
qcheck-macros = { workspace = true }
tempfile = { workspace = true }
