[package]
name = "radicle-ssh"
description = "Radicle SSH library"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
version = "0.10.0"
authors = [
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
  "Pierre-Étienne Meunier <pe@pijul.org>",
  "cloudhead <cloudhead@radicle.xyz>"
]
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true, default-features = true }
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
winpipe = { workspace = true }
